--- a/B1937_GP_note.tex
+++ b/B1937_GP_note.tex
@@ -1,27 +1,3 @@
-%%
-%% Beginning of file 'sample62.tex'
-%%
-%% Modified 2018 January
-%%
-%% This is a sample manuscript marked up using the
-%% AASTeX v6.2 LaTeX 2e macros.
-%%
-%% AASTeX is now based on Alexey Vikhlinin's emulateapj.cls 
-%% (Copyright 2000-2015).  See the classfile for details.
-
-%% AASTeX requires revtex4-1.cls (http://publish.aps.org/revtex4/) and
-%% other external packages (latexsym, graphicx, amssymb, longtable, and epsf).
-%% All of these external packages should already be present in the modern TeX 
-%% distributions.  If not they can also be obtained at www.ctan.org.
-
-%% The first piece of markup in an AASTeX v6.x document is the \documentclass
-%% command. LaTeX will ignore any data that comes before this command. The 
-%% documentclass can take an optional argument to modify the output style.
-%% The command below calls the preprint style  which will produce a tightly 
-%% typeset, one-column, single-spaced document.  It is the default and thus
-%% does not need to be explicitly stated.
-%%
-%%
 %% using aastex version 6.2
 \documentclass[RNAAS]{aastex62}
 
@@ -85,157 +61,36 @@
 \newcommand\aastex{AAS\TeX}
 \newcommand\latex{La\TeX}
 
-%% Reintroduced the \received and \accepted commands from AASTeX v5.2
 \received{\today}
 \revised{\today}
 \accepted{\today}
-%% Command to document which AAS Journal the manuscript was submitted to.
-%% Adds "Submitted to " the arguement.
 \submitjournal{RNAAS}
 
-%% Mark up commands to limit the number of authors on the front page.
-%% Note that in AASTeX v6.2 a \collaboration call (see below) counts as
-%% an author in this case.
-%
-%\AuthorCollaborationLimit=3
-%
-%% Will only show Schwarz, Muench and "the AAS Journals Data Scientist 
-%% collaboration" on the front page of this example manuscript.
-%%
-%% Note that all of the author will be shown in the published article.
-%% This feature is meant to be used prior to acceptance to make the
-%% front end of a long author article more manageable. Please do not use
-%% this functionality for manuscripts with less than 20 authors. Conversely,
-%% please do use this when the number of authors exceeds 40.
-%%
-%% Use \allauthors at the manuscript end to show the full author list.
-%% This command should only be used with \AuthorCollaborationLimit is used.
-
-%% The following command can be used to set the latex table counters.  It
-%% is needed in this document because it uses a mix of latex tabular and
-%% AASTeX deluxetables.  In general it should not be needed.
-%\setcounter{table}{1}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%
-%% The following section outlines numerous optional output that
-%% can be displayed in the front matter or as running meta-data.
-%%
-%% If you wish, you may supply running head information, although
-%% this information may be modified by the editorial offices.
 \shorttitle{B1937+21 Giant Pulse}
 \shortauthors{Foster and Karastergiou}
-%%
-%% You can add a light gray and diagonal water-mark to the first page 
-%% with this command:
-% \watermark{text}
-%% where "text", e.g. DRAFT, is the text to appear.  If the text is 
-%% long you can control the water-mark size with:
-%  \setwatermarkfontsize{dimension}
-%% where dimension is any recognized LaTeX dimension, e.g. pt, in, etc.
-%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%% This is the end of the preamble.  Indicate the beginning of the
-%% manuscript itself with \begin{document}.
 
 \begin{document}
 
 \title{A Giant Pulse detected from B1937+21 during LOFAR-UK Observations}
 
-%% LaTeX will automatically break titles if they run longer than
-%% one line. However, you may use \\ to force a line break if
-%% you desire. In v6.2 you can include a footnote in the title.
-
-%% A significant change from earlier AASTEX versions is in the structure for 
-%% calling author and affilations. The change was necessary to implement 
-%% autoindexing of affilations which prior was a manual process that could 
-%% easily be tedious in large author manuscripts.
-%%
-%% The \author command is the same as before except it now takes an optional
-%% arguement which is the 16 digit ORCID. The syntax is:
-%% \author[xxxx-xxxx-xxxx-xxxx]{Author Name}
-%%
-%% This will hyperlink the author name to the author's ORCID page. Note that
-%% during compilation, LaTeX will do some limited checking of the format of
-%% the ID to make sure it is valid.
-%%
-%% Use \affiliation for affiliation information. The old \affil is now aliased
-%% to \affiliation. AASTeX v6.2 will automatically index these in the header.
-%% When a duplicate is found its index will be the same as its previous entry.
-%%
-%% Note that \altaffilmark and \altaffiltext have been removed and thus 
-%% can not be used to document secondary affiliations. If they are used latex
-%% will issue a specific error message and quit. Please use multiple 
-%% \affiliation calls for to document more than one affiliation.
-%%
-%% The new \altaffiliation can be used to indicate some secondary information
-%% such as fellowships. This command produces a non-numeric footnote that is
-%% set away from the numeric \affiliation footnotes.  NOTE that if an
-%% \altaffiliation command is used it must come BEFORE the \affiliation call,
-%% right after the \author command, in order to place the footnotes in
-%% the proper location.
-%%
-%% Use \email to set provide email addresses. Each \email will appear on its
-%% own line so you can put multiple email address in one \email call. A new
-%% \correspondingauthor command is available in V6.2 to identify the
-%% corresponding author of the manuscript. It is the author's responsibility
-%% to make sure this name is also in the author list.
-%%
-%% While authors can be grouped inside the same \author and \affiliation
-%% commands it is better to have a single author for each. This allows for
-%% one to exploit all the new benefits and should make book-keeping easier.
-%%
-%% If done correctly the peer review system will be able to
-%% automatically put the author and affiliation information from the manuscript
-%% and save the corresponding author the trouble of entering it by hand.
-
 \correspondingauthor{Griffin Foster}
 \email{griffin.foster@physics.ox.ac.uk}
 
 \author[0000-0002-7559-4291]{Griffin Foster}
-\affil{University of Oxford \\
-Sub-Department of Astrophysics \\
+\affil{University of Oxford, Sub-Department of Astrophysics \\
 Denys Wilkinson Building, Keble Road \\
 Oxford, OX1 3RH, United Kingdom}
 
 \author{Aris Karastergiou}
-\affil{University of Oxford \\
-Sub-Department of Astrophysics \\
+\affil{University of Oxford, Sub-Department of Astrophysics \\
 Denys Wilkinson Building, Keble Road \\
 Oxford, OX1 3RH, United Kingdom}
+\affil{Physics Department, University of the Western Cape\\
+Cape Town 7535, South Africa}
+\affil{Department of Physics and Electronics, Rhodes University\\
+PO Box 94, Grahamstown 6140, South Africa}
 
-%% Note that the \and command from previous versions of AASTeX is now
-%% depreciated in this version as it is no longer necessary. AASTeX 
-%% automatically takes care of all commas and "and"s between authors names.
-
-%% AASTeX 6.2 has the new \collaboration and \nocollaboration commands to
-%% provide the collaboration status of a group of authors. These commands 
-%% can be used either before or after the list of corresponding authors. The
-%% argument for \collaboration is the collaboration identifier. Authors are
-%% encouraged to surround collaboration identifiers with ()s. The 
-%% \nocollaboration command takes no argument and exists to indicate that
-%% the nearby authors are not part of surrounding collaborations.
-
-%% Keywords should appear after the \end{abstract} command. 
-%% See the online documentation for the full list of available subject
-%% keywords and the rules for their use.
 \keywords{pulsars: individual B1937+21, scattering, radio continuum: general}
-
-%% From the front matter, we move on to the body of the paper.
-%% Sections are demarcated by \section and \subsection, respectively.
-%% Observe the use of the LaTeX \label
-%% command after the \subsection to give a symbolic KEY to the
-%% subsection for cross-referencing in a \ref command.
-%% You can use LaTeX's \ref and \label commands to keep track of
-%% cross-references to sections, equations, tables, and figures.
-%% That way, if you change the order of any elements, LaTeX will
-%% automatically renumber them.
-%%
-%% We recommend that authors also use the natbib \citep
-%% and \citet commands to identify citations.  The citations are
-%% tied to the reference list via symbolic KEYs. The KEY corresponds
-%% to the KEY in the \bibitem in the reference list below. 
 
 \section{}
 
@@ -244,7 +99,7 @@ observations with the LOFAR-UK station using the  ARTEMIS
 \citep{2015MNRAS.452.1254K} pulse detection back-end at 2016-06-20 01:46:32.457
 UTC. The detection occurred using the high-band array (HBA) centred at 145~MHz
 with a bandwidth of $5.85$~MHz. After initial detection the dynamic spectrum was
-incoherently de-dispersed with a Dispersion Measure (DM) of $71.0237$~pc~cm$^3$.
+incoherently de-dispersed with a Dispersion Measure (DM) of $71.0237$~pc~cm$^{-3}$.
 The time series of the pulse is shown in Figure \ref{fig:pulse}. The data is
 time smoothed using a boxcar function to a resolution of $2.6$~ms.
 
@@ -262,7 +117,7 @@ $3.27$~ms. The fit for the pulse before scattering is unresolved in width and
 has an flux of $270 \pm 34$~Jy.
 
 The dynamic spectrum data and analysis notebook is available on
-github\footnote{https://github.com/griffinfoster/B1937\_21\_GP}.
+github\footnote{https://github.com/griffinfoster/B1937-21-GP-Note}.
 
 % aslxlap07:~/local/data/LOFAR/B1937+21/B1937+21.ipynb
 \begin{figure}
@@ -270,7 +125,7 @@ github\footnote{https://github.com/griffinfoster/B1937\_21\_GP}.
     \includegraphics[width=0.75\linewidth]{figures/B1937+21_pulse.pdf}
     \caption{Time series of a giant pulse from B1937+21 (black solid), the data
     has been smoothed with a boxcar filter to a time resolution of $2.6$~ms. An
-    isotropic scatter model has been fit to the pulse (red dashed). The best fit
+    isotropic scattering model has been fit to the pulse (red dashed). The best fit
     model parameters are presented in the upper right corner.
     }
     \label{fig:pulse}
@@ -278,28 +133,5 @@ github\footnote{https://github.com/griffinfoster/B1937\_21\_GP}.
 
 \bibliographystyle{aasjournal}
 \bibliography{refs}
-%\begin{thebibliography}{}
-%
-%\bibitem[Astropy Collaboration et al.(2013)]{2013A&A...558A..33A} Astropy Collaboration, Robitaille, T.~P., Tollerud, E.~J., et al.\ 2013, \aap, 558, A33 
-%\bibitem[Bertin \& Arnouts(1996)]{1996A&AS..117..393B} Bertin, E., \& Arnouts, S.\ 1996, \aaps, 117, 393 
-%\bibitem[Corrales(2015)]{2015ApJ...805...23C} Corrales, L.\ 2015, \apj, 805, 23
-%\bibitem[Ferland et al.(2013)]{2013RMxAA..49..137F} Ferland, G.~J., Porter, R.~L., van Hoof, P.~A.~M., et al.\ 2013, \rmxaa, 49, 137
-%\bibitem[Hanisch \& Biemesderfer(1989)]{1989BAAS...21..780H} Hanisch, R.~J., \& Biemesderfer, C.~D.\ 1989, \baas, 21, 780 
-%\bibitem[Lamport(1994)]{lamport94} Lamport, L. 1994, LaTeX: A Document Preparation System, 2nd Edition (Boston, Addison-Wesley Professional)
-%\bibitem[Schwarz et al.(2011)]{2011ApJS..197...31S} Schwarz, G.~J., Ness, J.-U., Osborne, J.~P., et al.\ 2011, \apjs, 197, 31  
-%\bibitem[Vogt et al.(2014)]{2014ApJ...793..127V} Vogt, F.~P.~A., Dopita, M.~A., Kewley, L.~J., et al.\ 2014, \apj, 793, 127  
-%
-%\end{thebibliography}
-
-%% This command is needed to show the entire author+affilation list when
-%% the collaboration and author truncation commands are used.  It has to
-%% go at the end of the manuscript.
-%\allauthors
-
-%% Include this line if you are using the \added, \replaced, \deleted
-%% commands to see a summary list of all changes at the end of the article.
-%\listofchanges
 
 \end{document}
-
-% End of file `sample62.tex'.
