--- a/refs.bib
+++ b/refs.bib
@@ -13,6 +13,34 @@
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{2000ApJ...535..365K,
+   author = {{Kinkhabwala}, A. and {Thorsett}, S.~E.},
+    title = "{Multifrequency Observations of Giant Radio Pulses from the Millisecond Pulsar B1937+21}",
+  journal = {\apj},
+   eprint = {astro-ph/9910134},
+ keywords = {Stars: Pulsars: General, pulsars: individual (PSR B0531+21, PSR B1937+21), Stars: Neutron},
+     year = 2000,
+    month = may,
+   volume = 535,
+    pages = {365-372},
+      doi = {10.1086/308844},
+   adsurl = {http://adsabs.harvard.edu/abs/2000ApJ...535..365K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2002AstL...28...21K,
+   author = {{Kuzmin}, A.~D. and {Losovsky}, B.~Y.},
+    title = "{Giant Pulses from the Millisecond Pulsar PSR B1937+214}",
+  journal = {Astronomy Letters},
+     year = 2002,
+    month = jan,
+   volume = 28,
+    pages = {21-23},
+      doi = {10.1134/1.1434449},
+   adsurl = {http://adsabs.harvard.edu/abs/2002AstL...28...21K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{2015MNRAS.452.1254K,
        author = {{Karastergiou}, A. and {Chennamangalam}, J. and {Armour}, W. and
          {Williams}, C. and {Mort}, B. and {Dulwich}, F. and {Salvini}, S. and
@@ -73,4 +101,30 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{2016A&A...585A.128K,
+       author = {{Kondratiev}, V.~I. and {Verbiest}, J.~P.~W. and {Hessels}, J.~W.~T. and
+         {Bilous}, A.~V. and {Stappers}, B.~W. and {Kramer}, M. and
+         {Keane}, E.~F. and {Noutsos}, A. and {Os{\l}owski}, S. and
+         {Breton}, R.~P. and {Hassall}, T.~E. and {Alexov}, A. and {Cooper}, S. and
+         {Falcke}, H. and {Grie{\ss}meier}, J. -M. and {Karastergiou}, A. and
+         {Kuniyoshi}, M. and {Pilia}, M. and {Sobey}, C. and {ter Veen}, S. and
+         {van Leeuwen}, J. and {Weltevrede}, P. and {Bell}, M.~E. and
+         {Broderick}, J.~W. and {Corbel}, S. and {Eisl{\"o}ffel}, J. and
+         {Markoff}, S. and {Rowlinson}, A. and {Swinbank}, J.~D. and
+         {Wijers}, R.~A.~M.~J. and {Wijnands}, R. and {Zarka}, P.},
+        title = "{A LOFAR census of millisecond pulsars}",
+      journal = {\aap},
+     keywords = {telescopes, radio continuum: stars, stars: neutron, pulsars: general, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2016",
+        month = "Jan",
+       volume = {585},
+          eid = {A128},
+        pages = {A128},
+          doi = {10.1051/0004-6361/201527178},
+archivePrefix = {arXiv},
+       eprint = {1508.02948},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/\#abs/2016A&A...585A.128K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
