--- a/B1937_GP_note.tex
+++ b/B1937_GP_note.tex
@@ -94,6 +94,7 @@ PO Box 94, Grahamstown 6140, South Africa}
 
 \section{}
 
+% * second pulse (dm 73)
 % * cordes frbs from pulsars
 
 A Giant Pulse (GP) from B1937+21 \citep{1982Natur.300..615B} was detected during
@@ -143,9 +144,10 @@ unresolved in width as expected.
 \end{figure}
 
 \cite{2016A&A...585A.128K} reported detection of B1937+21 at frequencies below
-200~MHz but reported no GP detections. The mean flux density was measured to be
-$S_{\textrm{mean}} = 370$~mJy over the HBA band. The flux density of the GP
-reported here is approximately 200 times brighter than the mean flux density.
+200~MHz but reported no GP detections over a 30 minute observation. The mean
+flux density was measured to be $S_{\textrm{mean}} = 370$~mJy over the HBA band.
+The flux density of the GP reported here is approximately 200 times brighter
+than the mean flux density.
 
 \cite{2002AstL...28...21K} reported the detection of four GP's at 112~MHz
 ranging from $8.5 - 10$~Jy in peak flux density. The peak flux density of the
@@ -164,7 +166,10 @@ a 24-hour period B1937+21 transits a beam for approximately 12 minutes,
 resulting in a total of approximately 1 day of observing time on B1937+21. We
 set an upper limit on the GP event rate from pulses with a minimum peak flux
 density of 80~Jy $(S_{\textrm{peak}} \geq 80~\textrm{Jy})$ to one per day at
-these frequencies, or once every 55 million pulse periods.
+these frequencies, or once every 55 million pulse periods. This is two orders of
+magnitude less often than the rate reported in \cite{2002AstL...28...21K} but is
+consistent with a non-detection of GP's in the higher-sensitivity observations
+by \cite{2016A&A...585A.128K}.
 
 The dynamic spectrum data and analysis notebook is available on
 github\footnote{https://github.com/griffinfoster/B1937-21-GP-Note}.
